--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     <h2>Form Validation</h2>
     <form id="myForm">
         <label for="email">Email:</label>
-        <input type="text" id="email" name="email">
+        <input type="text" id="email" name="email" placeholder="name@example.com">
 
         <label for="phone">Phone:</label>
-        <input type="text" id="phone" name="phone">
+        <input type="text" id="phone" name="phone" placeholder="+xxx xxxxxxxxxx">
 
         <label for="zip">Zip Code:</label>
-        <input type="text" id="zip" name="zip">
+        <input type="text" id="zip" name="zip" placeholder="xxxxx">
 
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password">
+        <input type="password" id="password" name="password" placeholder="Must be at least 8 characters">
 
         <label for="url">URL:</label>
-        <input type="text" id="url" name="url">
+        <input type="text" id="url" name="url" placeholder="https://example.com/">
 
         <label for="date">Date (YYYY-MM-DD):</label>
-        <input type="text" id="date" name="date">
+        <input type="text" id="date" name="date" placeholder="YYYY-MM-DD">
 
         <input type="submit" value="Submit">
     </form>
