--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 
 </head>
 <body>
+<div class="area">
+    <ul class="circles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</div>
 
 <div class="container">
     <h2>Form Validation</h2>
